--- a/MVC/Views/Shared/_LoginPartial.cshtml
+++ b/MVC/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using CleanArchitecture.Domain.Models.Entities
+@using CleanArchitecture.Domain.Identity.Models
 @inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager
 
